syntax = "proto3";

option go_package = "./proto";

package proto;

message StudentId{
    uint64 id = 1;
}
